# zeroshot-python

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: integration_python.yml  lint_python.yml  test_python.yml
docs/: CNAME  getting_started.md  index.html  prompting_tips.md  styles.css  under_the_hood.md  why_zeroshot.md
examples/: run_classification.ipynb
public/: index.html
scripts/: integration_test.py
scripts/test_files/: test_binary.json  test_model.json  test_patches.json
zeroshot/: __init__.py  classifier.py  classifier_test.py  downloader.py  downloader_test.py  feature_extractor.py  feature_extractor_test.py  logistic_regression.py  logistic_regression_test.py  preprocessing.py  preprocessing_test.py  utils.py  utils_test.py
zeroshot/test_files/: test_model.json
